finish tables.html and flix.html

--- a/tables.html
+++ b/tables.html
@@ -19,7 +19,7 @@
                 padding: 5px 10px 5px 10px;
             }
             th{
-                background-color: #f2f2f2;
+                background-color: rgb(192, 191, 191);
                 text-align: center;
             }
             td{
@@ -61,6 +61,44 @@
             <td>10</td>
             <td>50</td>
             <td>60</td>
+        </tr>
+    </table>
+    <h1>-</h1>
+    <table>
+        <style>
+        th{
+                background-color: rgb(192, 191, 191);
+                text-align: center;
+            }
+        </style>
+        <tr>
+            <td colspan="4">Animales en peligro de extinción</td>
+        </tr>
+        <tr>
+            <td>Nombre</td>
+            <td>Cabezas</td>
+            <td>Previsión 2010</td>
+            <td>Previsión 2020  </td>
+        </tr>
+        <tr>
+            <td>Ballena</td>
+            <td>6000</td>
+            <td>4000</td>
+            <td>1500</td>
+        </tr>
+        <tr>
+            <td colspan="1">Oso Pardo</td>
+            <td rowspan="1">50</td>
+            <td colspan="2", rowspan="2">0</td>
+        </tr>
+        <tr>
+            <td colspan="1">Lince</td>
+            <td rowspan="1">10</td>
+        </tr>
+        <tr>
+            <td>Tigre</td>
+            <td>300</td>
+            <td colspan="2">210</td>
         </tr>
     </table>
     <h1>Su pedido</h1>
