Cambios en carpetas, flix y actividades

--- a/HTML/flix.html
+++ b/HTML/flix.html
@@ -15,7 +15,8 @@
         <th><p>Estrenos</p></th>
         <th><p>Tu Biblioteca</p></th>
         <th><p>Tu cuenta</p></th>
-        <th><p>Suscribirme</p></th>
+        
+        <th><p><a href="suscripcion.html">Suscribirme</a></p></th>
     </table>
     <table>
         <th><h2><p>Películas en estreno :</p></h2></th>
