avance en el diseño y funcion de flix con suscription html y css

--- a/HTML/flix.html
+++ b/HTML/flix.html
@@ -10,13 +10,12 @@
     <h1><p>-   Flix   -</p></h1>
     <table>
         <th><p>Menu</p></th>
-        <th><p>Películas</p></th>
+        <th><p>Movies</p></th>
         <th><p>Series</p></th>
-        <th><p>Estrenos</p></th>
-        <th><p>Tu Biblioteca</p></th>
-        <th><p>Tu cuenta</p></th>
-        
-        <th><p><a href="suscripcion.html">Suscribirme</a></p></th>
+        <th><p>Premiere</p></th>
+        <th><p>Your library</p></th>
+        <th><p>Your account</p></th>
+        <th><di id=".btn-primary"><p><a href="suscription.html">Create account</a></p></di></th>
     </table>
     <table>
         <th><h2><p>Películas en estreno :</p></h2></th>
